//
// Copied from https://gitlab.eng.vmware.com/blockchain/vmwathena_blockchain/blob/master/concord/proto/tee.proto
//

syntax = "proto3";
package com.vmware.concord.tee;

service TeeService {

    rpc RunTest (TestInput) returns (TestOutput);

    rpc SkvbcWrite (RawSkvbcRequest) returns (RawSkvbcResponse);

}

message TestInput {
    string test_input = 1;
}

message TestOutput {
    string test_output = 1;
}

message RawSkvbcRequest {
    bytes content = 1;
}

message RawSkvbcResponse {
    bytes content = 1;
}
